Updated notes.html to show initial commit

--- a/notes.html
+++ b/notes.html
@@ -39,3 +39,69 @@
   * > npm install -g gulp-sass --save-dev
   *
   ****/
+  
+  
+  
+  
+  
+  /****
+   * Initial push to github
+   *
+   ****/
+commd:~/workspace/bs4 $ git init
+Initialized empty Git repository in /home/ubuntu/workspace/bs4/.git/
+commd:~/workspace/bs4 (master) $ git remote add origin https://github.com/commd/bs4.git
+
+commd:~/workspace/bs4 (master) $ git add .
+commd:~/workspace/bs4 (master) $ git status
+On branch master
+
+No commits yet
+
+Changes to be committed:
+  (use "git rm --cached <file>..." to unstage)
+
+        new file:   gulpfile.js
+        new file:   notes.html
+        new file:   package.json
+        new file:   src/css/bootstrap.css
+        new file:   src/css/styles.css
+        new file:   src/index.html
+        new file:   src/js/bootstrap.min.js
+        new file:   src/js/jquery.min.js
+        new file:   src/js/popper.min.js
+        new file:   src/scss/styles.scss
+
+commd:~/workspace/bs4 (master) $ git commit -m "Initial commit"
+[master (root-commit) ebb53d6] Initial commit
+ 10 files changed, 6169 insertions(+)
+ create mode 100644 gulpfile.js
+ create mode 100644 notes.html
+ create mode 100644 package.json
+ create mode 100644 src/css/bootstrap.css
+ create mode 100644 src/css/styles.css
+ create mode 100644 src/index.html
+ create mode 100644 src/js/bootstrap.min.js
+ create mode 100644 src/js/jquery.min.js
+ create mode 100644 src/js/popper.min.js
+ create mode 100644 src/scss/styles.scss
+commd:~/workspace/bs4 (master) $ git push -u  origin master
+Username for 'https://github.com': vidscmd@netscape.net
+Password for 'https://vidscmd@netscape.net@github.com': 
+Counting objects: 16, done.
+Delta compression using up to 8 threads.
+Compressing objects: 100% (15/15), done.
+Writing objects: 100% (16/16), 72.50 KiB | 5.58 MiB/s, done.
+Total 16 (delta 0), reused 0 (delta 0)
+To https://github.com/commd/bs4.git
+ * [new branch]      master -> master
+Branch master set up to track remote branch master from origin.
+commd:~/workspace/bs4 (master) $ 
+
+/****
+ * End Initial Commit
+ * End Initial Push to Github
+ ****/
+ 
+ 
+ 
