--- a/notes.html
+++ b/notes.html
@@ -248,4 +248,12 @@ commd:~/workspace/bs4 (master) $
  ****/
  
  
- 
+ /****
+  * 180305 - Finished the tutorial.  The sticklier was with the customization part where we had to place the 
+  * customization before the previous entries.  i.e. first the background color, then the theme-color change,
+  * then the bootstrap import.
+  * Files changed includes: styles.scss and index.html
+  ****/
+  
+  
+  
