Added youtube video link to tutorial to notes.html

--- a/notes.html
+++ b/notes.html
@@ -6,6 +6,7 @@
  * Original Boostrap 4 Tutorial is located at: 
  *
  * https://coursetro.com/posts/code/130/Learn-Bootstrap-4-Final-in-2018-with-our-Free-Crash-Course
+ * Youtube video link: https://www.youtube.com/watch?v=hnCmSXCZEpU
  *
  ****/
 
